<resources>
    <string name="app_name">慕言</string>
    <string name="title_clock">打卡</string>
    <string name="title_student">学生</string>
    <string name="title_report">报表</string>
    <string name="title_curriculum">课程</string>
    <string name="clock">打卡</string>
    <string name="add_curriculum">添加课程</string>
    <string name="update_curriculum">修改课程</string>
    <string name="pls_input_curriculum_name">请输入课程名称，如：英语</string>
    <string name="my_curriculum">我的课程</string>
    <string name="curriculum_name">课程名称</string>
    <string name="curriculum_price">课时原价</string>
    <string name="pls_input_curriculum_price">请输入课程原价，如：10.0</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="my_student">我的学生</string>
    <string name="student_name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="recruit_date">招收日期</string>
    <string name="recruit_grade">招收年级</string>
    <string name="current_grade">当前年级</string>
    <string name="student_type">类别</string>
    <string name="guardian1">监护人1</string>
    <string name="phone">电话</string>
    <string name="guardian2">监护人2</string>
    <string name="add_student">添加学生信息</string>
    <string name="pls_input_student_name">请输入学生姓名</string>
    <string name="add_student_success">添加学生成功</string>
    <string name="student_info">学生信息</string>
    <string name="update_student_info">修改学生信息</string>
    <string name="select_curriculum">选择课程</string>
    <string name="clock_history">打卡历史</string>
    <string name="curriculum">课程</string>
    <string name="update_discount_price">修改课时优惠价</string>
    <string name="discount_price">优惠价</string>
    <string name="pls_input_discount_price">请输入优惠价，如8.0</string>
    <string name="pls_select_curriculum">请先选择课程</string>
    <string name="pls_select_curriculum_and_student">请先选择课程和学生</string>
    <string name="clock_success">打卡成功</string>
    <string name="path_card">补卡</string>
    <string name="clock_detail">打卡详情</string>
    <string name="select_clock_type">选择打卡类型</string>
    <string name="student_name_x">学生姓名：%s</string>
    <string name="curriculum_id_x">课程id：%s</string>
    <string name="curriculum_name_x">课程名称：%s</string>
    <string name="curriculum_price_x">课时原价：%s</string>
    <string name="curriculum_discount_price_x">课时优惠价：%s</string>
    <string name="curriculum_discount">课时优惠价：</string>
    <string name="clock_type_normal">上课</string>
    <string name="clock_type_adjustment">调课</string>
    <string name="clock_type_leave">请假</string>
    <string name="student_clock_detail">学生打卡详情</string>
    <string name="update_success">修改成功！</string>
    <string name="update_fail">修改失败！</string>
    <string name="delete_record">删除记录</string>
    <string name="clock_record">打卡记录</string>
    <string name="more">更多>>></string>
    <string name="tuition">学费</string>
    <string name="create_curriculum_cost">生成课时费</string>
    <string name="curriculum_cost">课时费</string>
    <string name="material_cost">资料费</string>
    <string name="other_cost">其他费用</string>
    <string name="create_tuition">生成学费单</string>
    <string name="tip">温馨提醒</string>
    <string name="month_curriculum_exists">%s课时费已存在，是否覆盖？</string>
    <string name="student_not_clock_record">%s该学生无打卡记录</string>
    <string name="cost_detail">费用详情</string>
    <string name="save_success">保存成功！</string>
    <string name="cost_name">费用名称</string>
    <string name="pls_input_cost_name">请输入费用名称，如：资料费</string>
    <string name="cost_price">费用</string>
    <string name="pls_input_cost">请输入费用，如：10.0</string>
    <string name="add_cost">添加费用</string>
    <string name="update_cost">修改费用</string>
    <string name="add_cost_success">添加费用成功</string>
    <string name="year_x_month_x">%d年%d月</string>
    <string name="update_cost_success">修改费用成功</string>
    <string name="rmb_x">¥%s</string>
    <string name="student_code_x">学号：%s</string>
    <string name="number">序</string>
    <string name="price">价格</string>
    <string name="project">项目</string>
    <string name="total_cost">合计费用</string>
    <string name="select_student">选择学生</string>
    <string name="delete_all_this_clock_record">您确定删除本次所有打卡记录吗？</string>
    <string name="delete_record_success">删除记录成功！</string>
    <string name="try_listen">试听</string>
    <string name="studying">在学</string>
    <string name="finished">已归档</string>
    <string name="all">全部</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="other_month">其他月份</string>
    <string name="other_month_cost">按月份统计费用</string>
    <string name="total_income_x">总收入：¥%s</string>
    <string name="curriculum_income_x">课时收入：¥%s</string>
    <string name="total_income">总收入</string>
    <string name="curriculum_income">课时收入</string>
    <string name="clock_statistic">统计</string>
    <string name="total_curriculum_x">总课时：%s</string>
    <string name="latest_clock_record">最近打卡记录</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="cost_type">收费类别</string>
    <string name="cost_type_curriculum">按课时</string>
    <string name="cost_type_term">按学期</string>
    <string name="pls_input_guardian_name">请输入监护人姓名</string>
    <string name="pls_input_guardian_phone">请输入监护人电话号码</string>
    <string name="pls_select_date">请点击选择日期</string>
    <string name="group_x_people">%s（%d人）</string>
    <string name="copyright">%s 版权所有</string>
    <string name="curriculum_count">课时</string>
    <string name="send_cost_list">发送学费单</string>
    <string name="cost_notification">学费通知单</string>
    <string name="all_total_cost">总计费用</string>
    <string name="company">慕言英语</string>
    <string name="company_en">MORE THAN ENGLISH</string>
    <string name="company_pay_notification">%s课时费通知单</string>
    <string name="dear">尊敬的</string>
    <string name="parent">家长：</string>
    <string name="thanks_for_support">感谢您对我们教学工作的信任与支持！</string>
    <string name="below_is">以下是</string>
    <string name="classmate">同学（</string>
    <string name="brackets_right">）</string>
    <string name="payment_reminder">的课时费，请您核对确认并在收到通知后尽快交清费用，感谢您的配合！</string>
    <string name="empty_tip">暂无数据</string>
    <string name="no_curriculum_tip">暂无课程，请点击右上角 + 添加课程</string>
    <string name="no_student_tip">暂无学生，请点击右上角 + 添加学生</string>
    <string name="student_no_curriculum_tip">暂无课程，请点击右上角 + 选择课程</string>
    <string name="clock_no_curriculum_tip">暂无课程，请在首页->课程页面添加课程</string>
    <string name="clock_no_student_tip">该暂无学生选择该课程，请在学生信息->课程为学生选择课程</string>
    <string name="no_click_record_tip">暂无打卡记录</string>
    <string name="pls_input">请输入</string>
    <string name="warm_tip">温馨提示</string>
    <string name="pls_input_clock_count">请输入本次打卡课时，如1.0</string>
    <string name="curriculum_count_m">课时：</string>
    <string name="no">序号</string>
    <string name="cost_list_title_price">原价\n(元/课时)</string>
    <string name="cost_list_title_discount_price">优惠价\n(元/课时)</string>
    <string name="x_year_x_month_x_day">%d"-"%d"-"%d</string>
    <string name="notification_title">通知单标题</string>
    <string name="pls_input_cost_title">请输入标题</string>
    <string name="pls_input_cost_project">请输入费用名称</string>
    <string name="title">标题</string>
    <string name="grade">年级</string>
    <string name="pls_input_grade">请输入年级</string>
    <string name="save_to_image">生成图片</string>
    <string name="seal_name_cn">印章中文名</string>
    <string name="pls_input_seal_name_cn">请输入印章中文名</string>
    <string name="seal_name_en">印章英文名</string>
    <string name="pls_input_seal_name_en">请输入印章英文名</string>
    <string name="discount_price_x">优惠价：%s</string>
    <string name="curriculum_count_x">课时：%s</string>
    <string name="cost_x">费用：%s</string>
    <string name="pls_input_phone">请输入电话号码</string>
    <string name="remarks">备注</string>
    <string name="pls_input_remarks">请填写备注信息</string>
    <string name="delete_curriculum">删除课程</string>
    <string name="delete_curriculum_tip">删除课程%s！\n删除后该课程将从学生所选课程中移除，并且该课程的所有打卡记录及其打卡产生的课时费用将被删除！\n您确定删除该课程吗？</string>
    <string name="delete_success">删除成功！</string>
    <string name="clock_detail_month_x">打卡详情（%s）</string>
    <string name="report_month_x">报表（%s）</string>
    <string name="total_curriculum_count_x">合计课时：%s</string>
    <string name="total_curriculum_cost_x">合计课时费：%s</string>
    <string name="original_price_x">原价：%s</string>

</resources>
