<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">


    <TextView
        android:id="@+id/tv_student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/student_code_x"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/student_name_x"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_curriculum_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/curriculum_id_x"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_curriculum_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/curriculum_name_x"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_curriculum_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/curriculum_price_x"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curriculum_discount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_discount_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pls_input_discount_price"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_clock_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/rb_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/clock_type_normal"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_adjustment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/clock_type_adjustment"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_type_leave"
            android:textSize="20sp" />
    </RadioGroup>


</LinearLayout>