<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.student.StudentInfoActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_month"
        android:icon="@drawable/ic_time_white_24dp"
        android:orderInCategory="100"
        android:title="@string/other_month"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_notification_white_24dp"
        android:orderInCategory="100"
        android:title="@string/send_cost_list"
        app:showAsAction="ifRoom" />


</menu>