<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_list_item"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:text="@string/number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="3"
        android:text="@string/project"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="3"
        android:gravity="end"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_discount_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="4"
        android:gravity="end"
        android:text="@string/discount_price"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</LinearLayout>