<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clock">

    <fragment
        android:id="@+id/navigation_clock"
        android:name="com.jwong.education.ui.clock.ClockFragment"
        android:label="@string/title_clock"
        tools:layout="@layout/fragment_clock" />

    <fragment
        android:id="@+id/navigation_student"
        android:name="com.jwong.education.ui.student.StudentFragment"
        android:label="@string/title_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.jwong.education.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.jwong.education.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>